[gd_scene load_steps=6 format=3 uid="uid://c2cwmjdx0vba1"]

[ext_resource type="Texture2D" uid="uid://brrosc7nbjvbc" path="res://assets/weapons/tile_0118.png" id="1_tclgm"]
[ext_resource type="Script" uid="uid://caws40bxgas1e" path="res://scripts/double_axe.gd" id="2_35cos"]

[sub_resource type="Animation" id="Animation_a7quc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.261799]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_35cos"]
resource_name = "slash"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 0.5, 0.5),
"update": 0,
"values": [-0.261799, -1.22173, 6.02139]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 2, 2, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 0.9), Vector2(0.9, 1.2), Vector2(1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_slash"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_doa76"]
_data = {
&"RESET": SubResource("Animation_a7quc"),
&"slash": SubResource("Animation_35cos")
}

[node name="DoubleAxe" type="Node2D"]
texture_filter = 1
script = ExtResource("2_35cos")
damage = 3.0
max_combo = 1
knockback_force = 300.0

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -0.261799
texture = ExtResource("1_tclgm")
offset = Vector2(-8, -6.5)

[node name="DoubleAxeAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_doa76")
}

[connection signal="animation_finished" from="DoubleAxeAnim" to="." method="_on_double_axe_animation_finished"]
